--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitHubDeveloperApi</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="users">Users</string>
 </resources>
